--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+        background-color: rgb(217, 238, 255);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.auth-layout { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 5px #038eff;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.form-wrapper {
+    margin-bottom: 10px;
+}
+
+.form-label {
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    color: #5b5b5b;
+    margin-bottom: 5px;
+}
+
+.form-input{
+    padding: 5px;
+    outline: none;
+    border: 1px solid #d9eeff;
+    border-radius: 2px;
+    font-size: 16px;
+    width: -webkit-fill-available;
+    transition: ease-in-out 0.2s ;
+}
+
+.form-input:hover {
+    border-color: #038eff;
+}
+
+.error{
+    margin-top: 5px;
+    font-size: 14px;
+    color: red;
+}
+
+.button {
+    border: 0;
+    background-color: #038eff;
+    padding: 8px 10px;
+    color: #fff;
+    width: 100%;
+    border-radius: 2px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    font-weight: 400;
 }
